Updated the bow implementation for the item component version and renamed it to BowLikeItem.